--- a/tox.ini
+++ b/tox.ini
@@ -12,4 +12,4 @@ commands= py.test -n 4 h2 {toxinidir}/test/
 [testenv:lint]
 basepython=python3.4
 deps = flake8
-commands = flake8 --max-complexity 10 h2
+commands = flake8 --max-complexity 10 h2 test
