--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,6 @@ script:
       if [[ $TRAVIS_PYTHON_VERSION == pypy ]]; then
         py.test test/
       else
-        py.test -n 4 --cov hyper test/
+        py.test -n 4 --cov h2 test/
         coverage report -m
       fi
