Come on Travis, get modern.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ python:
 
 sudo: false
 install:
+  - "pip install -U pip setuptools"
   - "pip install ."
   - "pip install -r test_requirements.txt"
   - "pip install flake8"
