--- a/tox.ini
+++ b/tox.ini
@@ -11,5 +11,5 @@ commands= py.test -n 4 h2 {toxinidir}/test/
 
 [testenv:lint]
 basepython=python3.4
-deps = flake8~=2.4
+deps = flake8==2.4.1
 commands = flake8 --max-complexity 10 h2 test
