--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,7 @@ script:
       if [[ $TRAVIS_PYTHON_VERSION == pypy ]]; then
         py.test test/
       else
-        py.test -n 4 --cov h2 test/
+        coverage run -m py.test test/
+        coverage combine
+        coverage report
       fi
