Handle differences between hyperframe 3 and 4.

--- a/.coveragerc
+++ b/.coveragerc
@@ -9,6 +9,7 @@ exclude_lines =
     pragma: no cover
     .*:.* # Python \d.*
     assert False, "Should not be reachable"
+    .*:.* # Platform-specific:
 
 [paths]
 source =
