--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,4 @@ install:
   - "pip install flake8"
 before_script: "flake8 --max-complexity 10 h2 test"
 script:
-  - >
-      if [[ $TRAVIS_PYTHON_VERSION == pypy ]]; then
-        py.test test/
-      else
-        coverage run -m py.test test/
-        coverage combine
-        coverage report
-      fi
+  - ./.travis/run.sh
