Add tox environment for docs building.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27, py33, py34, py35, pypy, lint
+envlist = py27, py33, py34, py35, pypy, lint, docs
 
 [testenv]
 deps= -r{toxinidir}/test_requirements.txt
@@ -13,3 +13,12 @@ commands= py.test -n 4 h2 {toxinidir}/test/
 basepython=python3.4
 deps = flake8==3.0.4
 commands = flake8 --max-complexity 10 h2 test
+
+[testenv:docs]
+basepython=python3.5
+deps = sphinx==1.4.6
+whitelist_externals = make
+changedir = {toxinidir}/docs
+commands =
+    make clean
+    make html
