Add tox environment for testing Twisted.

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,19 @@ commands= py.test -n 4 --cov h2 {toxinidir}/test/
 # temporarily disable coverage testing on PyPy due to performance problems
 commands= py.test -n 4 h2 {toxinidir}/test/
 
+[testenv:py27-twistedMaster]
+# This is a validation test that confirms that Twisted's test cases haven't
+# broken.
+deps =
+    # [tls,http2] syntax doesn't work here so we enumerate all dependencies.
+    git+https://github.com/twisted/twisted
+    pyopenssl
+    service_identity
+    idna
+    priority
+    sphinx
+commands = trial --reporter=text twisted
+
 [testenv:lint]
 basepython=python3.4
 deps = flake8==3.0.4
