--- a/.travis.yml
+++ b/.travis.yml
@@ -5,22 +5,35 @@ cache:
   directories:
     - $HOME/.cache/pip
 
-python:
-  - "2.7"
-  - "3.3"
-  - "3.4"
-  - "3.5"
-  - "pypy-5.3.1"
+matrix:
+  include:
+    # Main tests on supported Python versions.
+    - python: "2.7"
+      env: TOXENV=py27
+    - python: "3.3"
+      env: TOXENV=py33
+    - python: "3.4"
+      env: TOXENV=py34
+    - python: "3.5"
+      env: TOXENV=py35
+    - python: "pypy-5.4.1"
+      env: TOXENV=pypy
 
-sudo: false
+    # Linting, docs, and other non-test stuff.
+    - python: "3.4"
+      env: TOXENV=lint
+    - python: "3.5"
+      env: TOXENV=docs
+
+    # Test we haven't broken our major dependencies.
+    - python: "2.7"
+      env: TOXENV=py27-twistedMaster
+
 install:
   - "pip install -U pip setuptools"
-  - "pip install ."
-  - "pip install -r test_requirements.txt"
-  - "pip install flake8"
-  - "pip install sphinx"
+  - "pip install -U tox"
 before_script:
   - "flake8 --max-complexity 10 h2 test"
   - "sphinx-build -nW -b html -d docs/build/doctrees docs/source docs/build/html"
 script:
-  - ./.travis/run.sh
+  - tox
