--- a/tox.ini
+++ b/tox.ini
@@ -3,11 +3,13 @@ envlist = py27, py33, py34, py35, pypy, lint, docs
 
 [testenv]
 deps= -r{toxinidir}/test_requirements.txt
-commands= py.test -n 4 --cov h2 {toxinidir}/test/
+commands=
+    coverage run -m py.test {posargs} {toxinidir}/test/
+    coverage report
 
 [testenv:pypy]
 # temporarily disable coverage testing on PyPy due to performance problems
-commands= py.test -n 4 h2 {toxinidir}/test/
+commands= py.test {posargs} {toxinidir}/test/
 
 [testenv:py27-twistedMaster]
 # This is a validation test that confirms that Twisted's test cases haven't
@@ -33,5 +35,5 @@ deps = sphinx==1.4.8
 whitelist_externals = make
 changedir = {toxinidir}/docs
 commands =
-    make clean
-    make html
+    rm -rf build
+    sphinx-build -nW -b html -d build/doctrees source build/html
