Twisted expects its tests to be run like this.
(cherry picked from commit f2833354f16148d09743a433fe3e3d8cc717fd4f)

--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ deps =
     idna
     priority
     sphinx
-commands = trial --reporter=text twisted
+commands = python -m twisted.trial --reporter=text twisted
 
 [testenv:lint]
 basepython=python3.4
