--- a/tox.ini
+++ b/tox.ini
@@ -36,3 +36,9 @@ changedir = {toxinidir}/docs
 commands =
     rm -rf build
     sphinx-build -nW -b html -d build/doctrees source build/html
+
+[testenv:graphs]
+basepython=python2.7
+deps = graphviz==0.5.2
+commands =
+    python visualizer/visualize.py -i docs/source/_static
