--- a/tox.ini
+++ b/tox.ini
@@ -33,6 +33,7 @@ commands = flake8 --max-complexity 10 h2 test
 basepython=python3.5
 deps = sphinx==1.4.9
 changedir = {toxinidir}/docs
+whitelist_externals = rm
 commands =
     rm -rf build
     sphinx-build -nW -b html -d build/doctrees source build/html
