Test our packaging is good

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27, py33, py34, py35, py36, pypy, lint, docs
+envlist = py27, py33, py34, py35, py36, pypy, lint, packaging, docs
 
 [testenv]
 deps= -r{toxinidir}/test_requirements.txt
@@ -43,3 +43,12 @@ basepython=python2.7
 deps = graphviz==0.6
 commands =
     python visualizer/visualize.py -i docs/source/_static
+
+[testenv:packaging]
+basepython=python2.7
+deps =
+    check-manifest==0.35
+    readme_renderer==17.2
+commands =
+    check-manifest
+    python setup.py check --metadata --restructuredtext --strict
