--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,8 @@ matrix:
       env: TOXENV=lint
     - python: "3.5"
       env: TOXENV=docs
+    - python: "2.7"
+      env: TOXENV=packaging
 
     # Test we haven't broken our major dependencies.
     - python: "2.7"
