--- a/tox.ini
+++ b/tox.ini
@@ -39,3 +39,10 @@ deps =
 commands =
     check-manifest
     python setup.py check --metadata --restructuredtext --strict
+
+[testenv:h2spec]
+basepython=python3.6
+deps = twisted[tls]==17.1.0
+whitelist_externals = {toxinidir}/test/h2spectest.sh
+commands =
+    {toxinidir}/test/h2spectest.sh
