Remove positional args

--- a/tox.ini
+++ b/tox.ini
@@ -45,4 +45,4 @@ basepython=python3.6
 deps = twisted[tls]==17.1.0
 whitelist_externals = {toxinidir}/test/h2spectest.sh
 commands =
-    {toxinidir}/test/h2spectest.sh {posargs}
+    {toxinidir}/test/h2spectest.sh
