[requires.io] dependency update

--- a/tox.ini
+++ b/tox.ini
@@ -48,7 +48,7 @@ commands =
 basepython=python2.7
 deps =
     check-manifest==0.36
-    readme_renderer==17.2
+    readme-renderer==17.3
 commands =
     check-manifest
     python setup.py check --metadata --restructuredtext --strict
