--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: false
 language: python
 
 branches:
@@ -15,28 +14,39 @@ matrix:
   include:
     # Main tests on supported Python versions.
     - python: "2.7"
+      dist: trusty
       env: TOXENV=py27
     - python: "3.4"
+      dist: trusty
       env: TOXENV=py34
     - python: "3.5"
+      dist: trusty
       env: TOXENV=py35
     - python: "3.6"
+      dist: trusty
       env: TOXENV=py36
+    - python: "3.7"
+      dist: xenial
+      env: TOXENV=py37
     - python: "pypy-5.3.1"
+      dist: trusty
       env: TOXENV=pypy
 
     # Linting, docs, and other non-test stuff.
-    - python: "3.4"
+    - python: "3.7"
+      dist: xenial
       env: TOXENV=lint
-    - python: "3.5"
+    - python: "3.7"
+      dist: xenial
       env: TOXENV=docs
-    - python: "2.7"
+    - python: "3.7"
+      dist: xenial
       env: TOXENV=packaging
 
     # Test we haven't broken our major dependencies.
     - python: "2.7"
+      dist: trusty
       env: TOXENV=py27-twistedMaster
-
 install:
   - "pip install -U pip setuptools"
   - "pip install -U tox"
