--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27, py34, py35, py36, pypy, lint, packaging, docs
+envlist = py27, py34, py35, py36, py37, pypy, lint, packaging, docs
 
 [testenv]
 deps= -r{toxinidir}/test_requirements.txt
@@ -25,12 +25,12 @@ deps =
 commands = python -m twisted.trial --reporter=text twisted
 
 [testenv:lint]
-basepython=python3.4
+basepython=python3.7
 deps = flake8==3.5.0
 commands = flake8 --max-complexity 10 h2 test
 
 [testenv:docs]
-basepython=python3.5
+basepython=python3.7
 deps = sphinx==1.4.9
 changedir = {toxinidir}/docs
 whitelist_externals = rm
@@ -45,7 +45,7 @@ commands =
     python visualizer/visualize.py -i docs/source/_static
 
 [testenv:packaging]
-basepython=python2.7
+basepython=python3.7
 deps =
     check-manifest==0.36
     readme-renderer==17.3
