Fix twisted build
The extra dependency syntax now works, and in addition ensures all the
required dependencies are installed (cause of breakage).

--- a/tox.ini
+++ b/tox.ini
@@ -15,12 +15,7 @@ commands= py.test {posargs} {toxinidir}/test/
 # This is a validation test that confirms that Twisted's test cases haven't
 # broken.
 deps =
-    # [tls,http2] syntax doesn't work here so we enumerate all dependencies.
-    git+https://github.com/twisted/twisted
-    pyopenssl
-    service_identity
-    idna
-    priority
+    twisted[tls, http2, conch]
     sphinx
 commands = python -m twisted.trial --reporter=text twisted
 
