--- a/tox.ini
+++ b/tox.ini
@@ -4,12 +4,12 @@ envlist = py27, py34, py35, py36, py37, pypy, lint, packaging, docs
 [testenv]
 deps= -r{toxinidir}/test_requirements.txt
 commands=
-    coverage run -m py.test {posargs} {toxinidir}/test/
+    coverage run -m py.test {posargs}
     coverage report
 
 [testenv:pypy]
 # temporarily disable coverage testing on PyPy due to performance problems
-commands= py.test {posargs} {toxinidir}/test/
+commands= py.test {posargs}
 
 [testenv:lint]
 basepython=python3.7
