--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,9 @@ matrix:
     - python: "3.7"
       dist: xenial
       env: TOXENV=py37
+    - python: "3.8"
+      dist: xenial
+      env: TOXENV=py38
     - python: "pypy-5.3.1"
       dist: trusty
       env: TOXENV=pypy
