--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27, py34, py35, py36, py37, py38, pypy, lint, packaging, docs
+envlist = py36, py37, py38, pypy, lint, packaging, docs
 
 [testenv]
 deps= -r{toxinidir}/test_requirements.txt
@@ -12,13 +12,13 @@ commands=
 commands= py.test {posargs}
 
 [testenv:lint]
-basepython=python3.7
-deps = flake8==3.7.8
+basepython=python3.8
+deps = flake8==3.7.9
 commands = flake8 --max-complexity 10 h2 test
 
 [testenv:docs]
-basepython=python3.7
-deps = sphinx==2.2.0
+basepython=python3.8
+deps = sphinx==2.3.1
 changedir = {toxinidir}/docs
 whitelist_externals = rm
 commands =
@@ -26,23 +26,23 @@ commands =
     sphinx-build -nW -b html -d build/doctrees source build/html
 
 [testenv:graphs]
-basepython=python2.7
-deps = graphviz==0.13
+basepython=python3.8
+deps = graphviz==0.13.2
 commands =
     python visualizer/visualize.py -i docs/source/_static
 
 [testenv:packaging]
-basepython=python3.7
+basepython=python3.8
 deps =
-    check-manifest==0.39
+    check-manifest==0.40
     readme-renderer==24.0
 commands =
     check-manifest
     python setup.py check --metadata --restructuredtext --strict
 
 [testenv:h2spec]
-basepython=python3.6
-deps = twisted[tls]==19.7.0
+basepython=python3.8
+deps = twisted[tls]==19.10.0
 whitelist_externals = {toxinidir}/test/h2spectest.sh
 commands =
     {toxinidir}/test/h2spectest.sh
