--- a/.travis.yml
+++ b/.travis.yml
@@ -13,39 +13,31 @@ cache:
 matrix:
   include:
     # Main tests on supported Python versions.
-    - python: "2.7"
-      dist: trusty
-      env: TOXENV=py27
-    - python: "3.4"
-      dist: trusty
-      env: TOXENV=py34
-    - python: "3.5"
-      dist: trusty
-      env: TOXENV=py35
     - python: "3.6"
-      dist: trusty
+      dist: bionic
       env: TOXENV=py36
     - python: "3.7"
-      dist: xenial
+      dist: bionic
       env: TOXENV=py37
     - python: "3.8"
-      dist: xenial
+      dist: bionic
       env: TOXENV=py38
-    - python: "pypy-5.3.1"
-      dist: trusty
+    - python: "pypy3.6-7.2.0"
+      dist: bionic
       env: TOXENV=pypy
 
     # Linting, docs, and other non-test stuff.
-    - python: "3.7"
-      dist: xenial
+    - python: "3.8"
+      dist: bionic
       env: TOXENV=lint
-    - python: "3.7"
-      dist: xenial
+    - python: "3.8"
+      dist: bionic
       env: TOXENV=docs
-    - python: "3.7"
-      dist: xenial
+    - python: "3.8"
+      dist: bionic
       env: TOXENV=packaging
-    - python: "3.6"
+    - python: "3.8"
+      dist: bionic
       env: TOXENV=h2spec
 
 install:
