replace TravisCI with GitHub Actions

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,23 @@
+[wheel]
+universal = 1
+
 [tool:pytest]
 testpaths = test
 
-[wheel]
-universal = 1
+[coverage:run]
+branch = True
+source = h2
+
+[coverage:report]
+fail_under = 100
+show_missing = True
+exclude_lines =
+    pragma: no cover
+    assert False, "Should not be reachable"
+    .*:.* # Python \d.*
+    .*:.* # Platform-specific:
+
+[coverage:paths]
+source =
+    h2/
+    */site-packages/h2
