--- a/tox.ini
+++ b/tox.ini
@@ -1,24 +1,38 @@
 [tox]
-envlist = py36, py37, py38, pypy, lint, packaging, docs
+envlist = py36, py37, py38, pypy3, lint, docs, packaging
+
+[gh-actions]
+python =
+    3.6: py36
+    3.7: py37
+    3.8: py38, format, mypy, lint, docs, packaging, h2spec
+    pypy3: pypy3
 
 [testenv]
-deps= -r{toxinidir}/test_requirements.txt
-commands=
-    coverage run -m py.test {posargs}
-    coverage report
+passenv =
+    GITHUB_*
+deps =
+    pytest==5.4.3
+    pytest-cov==2.10.0
+    pytest-xdist==1.33.0
+    hypothesis>=5.5,<6
+commands =
+    pytest --cov-report=xml  --cov-report=term --cov=h2 {posargs}
 
-[testenv:pypy]
+[testenv:pypy3]
 # temporarily disable coverage testing on PyPy due to performance problems
-commands= py.test {posargs}
+commands = pytest {posargs}
 
 [testenv:lint]
-basepython=python3.8
-deps = flake8==3.7.9
+basepython = python3.8
+deps =
+    flake8==3.8.3
 commands = flake8 --max-complexity 10 h2 test
 
 [testenv:docs]
-basepython=python3.8
-deps = sphinx==2.4.4
+basepython = python3.8
+deps =
+    sphinx==2.4.4
 changedir = {toxinidir}/docs
 whitelist_externals = rm
 commands =
@@ -26,23 +40,28 @@ commands =
     sphinx-build -nW -b html -d build/doctrees source build/html
 
 [testenv:graphs]
-basepython=python3.8
-deps = graphviz==0.13.2
+basepython = python3.8
+deps =
+    graphviz==0.13.2
 commands =
     python visualizer/visualize.py -i docs/source/_static
 
 [testenv:packaging]
-basepython=python3.8
+basepython = python3.8
 deps =
     check-manifest==0.41
     readme-renderer==25.0
+    twine==3.2.0
 commands =
     check-manifest
     python setup.py check --metadata --restructuredtext --strict
+    python setup.py sdist
+    twine check dist/*
 
 [testenv:h2spec]
-basepython=python3.8
-deps = twisted[tls]==19.10.0
+basepython = python3.8
+deps =
+    twisted[tls]==19.10.0
 whitelist_externals = {toxinidir}/test/h2spectest.sh
 commands =
     {toxinidir}/test/h2spectest.sh
