--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,10 @@
-include README.rst LICENSE CONTRIBUTORS.rst HISTORY.rst tox.ini test_requirements.txt .coveragerc Makefile
-recursive-include test *.py *.sh
+graft h2
 graft docs
-prune docs/build
+graft test
 graft visualizer
+graft examples
+prune docs/build
 recursive-include examples *.py *.crt *.key *.pem *.csr
 recursive-include utils *.sh
-recursive-include _travis *.sh
+include README.rst LICENSE CONTRIBUTORS.rst HISTORY.rst tox.ini test_requirements.txt .coveragerc Makefile
+global-exclude *.pyc *.pyo *.swo *.swp *.map *.yml *.DS_Store
