--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,5 +6,5 @@ graft examples
 prune docs/build
 recursive-include examples *.py *.crt *.key *.pem *.csr
 recursive-include utils *.sh
-include README.rst LICENSE CHANGELOG.rst tox.ini test_requirements.txt .coveragerc Makefile
+include README.rst LICENSE CHANGELOG.rst tox.ini Makefile
 global-exclude *.pyc *.pyo *.swo *.swp *.map *.yml *.DS_Store
