[requires.io] dependency update

--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,7 @@ commands = pytest {posargs}
 basepython = python3.8
 deps =
     flake8==3.8.3
-commands = flake8 --max-complexity 10 h2 test
+commands = flake8 --max-complexity 10 src test
 
 [testenv:docs]
 basepython = python3.8
@@ -54,7 +54,6 @@ deps =
     twine==3.2.0
 commands =
     check-manifest
-    python setup.py check --metadata --restructuredtext --strict
     python setup.py sdist
     twine check dist/*
 
