update sphinx and docs config

--- a/tox.ini
+++ b/tox.ini
@@ -32,12 +32,12 @@ commands = flake8 --max-complexity 10 src test
 [testenv:docs]
 basepython = python3.8
 deps =
-    sphinx==2.4.4
+    sphinx==3.1.2
 changedir = {toxinidir}/docs
 whitelist_externals = rm
 commands =
     rm -rf build
-    sphinx-build -nW -b html -d build/doctrees source build/html
+    sphinx-build -W -b html -d build/doctrees source build/html
 
 [testenv:graphs]
 basepython = python3.8
