fix wheel generation

--- a/tox.ini
+++ b/tox.ini
@@ -52,9 +52,11 @@ deps =
     check-manifest==0.42
     readme-renderer==26.0
     twine==3.2.0
+whitelist_externals = rm
 commands =
+    rm -rf dist/
     check-manifest
-    python setup.py sdist
+    python setup.py sdist bdist_wheel
     twine check dist/*
 
 [testenv:h2spec]
