--- a/tox.ini
+++ b/tox.ini
@@ -13,8 +13,8 @@ passenv =
     GITHUB_*
 deps =
     pytest==6.0.1
-    pytest-cov==2.10.0
-    pytest-xdist==1.34.0
+    pytest-cov==2.10.1
+    pytest-xdist==2.0.0
     hypothesis>=5.5,<6
 commands =
     pytest --cov-report=xml  --cov-report=term --cov=h2 {posargs}
@@ -32,19 +32,12 @@ commands = flake8 --max-complexity 10 src test
 [testenv:docs]
 basepython = python3.8
 deps =
-    sphinx==3.1.2
+    sphinx==3.2.1
+whitelist_externals = make
 changedir = {toxinidir}/docs
-whitelist_externals = rm
 commands =
-    rm -rf build
-    sphinx-build -W -b html -d build/doctrees source build/html
-
-[testenv:graphs]
-basepython = python3.8
-deps =
-    graphviz==0.14.1
-commands =
-    python visualizer/visualize.py -i docs/source/_static
+    make clean
+    make html
 
 [testenv:packaging]
 basepython = python3.8
@@ -58,6 +51,13 @@ commands =
     check-manifest
     python setup.py sdist bdist_wheel
     twine check dist/*
+
+[testenv:graphs]
+basepython = python3.8
+deps =
+    graphviz==0.14.1
+commands =
+    python visualizer/visualize.py -i docs/source/_static
 
 [testenv:h2spec]
 basepython = python3.8
