[requires.io] dependency update

--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ passenv =
 deps =
     pytest==6.0.1
     pytest-cov==2.10.1
-    pytest-xdist==2.0.0
+    pytest-xdist==2.1.0
     hypothesis>=5.5,<6
 commands =
     pytest --cov-report=xml  --cov-report=term --cov=h2 {posargs}
@@ -33,18 +33,11 @@ commands = flake8 --max-complexity 10 src test
 basepython = python3.8
 deps =
     sphinx==3.2.1
+whitelist_externals = make
 changedir = {toxinidir}/docs
-whitelist_externals = rm
 commands =
-    rm -rf build
-    sphinx-build -W -b html -d build/doctrees source build/html
-
-[testenv:graphs]
-basepython = python3.8
-deps =
-    graphviz==0.14.1
-commands =
-    python visualizer/visualize.py -i docs/source/_static
+    make clean
+    make html
 
 [testenv:packaging]
 basepython = python3.8
@@ -52,10 +45,19 @@ deps =
     check-manifest==0.42
     readme-renderer==26.0
     twine==3.2.0
+whitelist_externals = rm
 commands =
+    rm -rf dist/
     check-manifest
-    python setup.py sdist
+    python setup.py sdist bdist_wheel
     twine check dist/*
+
+[testenv:graphs]
+basepython = python3.8
+deps =
+    graphviz==0.14.1
+commands =
+    python visualizer/visualize.py -i docs/source/_static
 
 [testenv:h2spec]
 basepython = python3.8
