--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,21 @@
 [tox]
-envlist = py36, py37, py38, pypy3, lint, docs, packaging
+envlist = py36, py37, py38, py39, pypy3, lint, docs, packaging
 
 [gh-actions]
 python =
     3.6: py36
     3.7: py37
-    3.8: py38, format, mypy, lint, docs, packaging, h2spec
+    3.8: py38
+    3.9: py39, lint, docs, packaging, h2spec
     pypy3: pypy3
 
 [testenv]
 passenv =
     GITHUB_*
 deps =
-    pytest==6.0.2
-    pytest-cov==2.10.1
-    pytest-xdist==2.1.0
+    pytest>=6.0.1,<7
+    pytest-cov>=2.10.1,<3
+    pytest-xdist>=2.0.0,<3
     hypothesis>=5.5,<6
 commands =
     pytest --cov-report=xml  --cov-report=term --cov=h2 {posargs}
@@ -24,15 +25,13 @@ commands =
 commands = pytest {posargs}
 
 [testenv:lint]
-basepython = python3.8
 deps =
-    flake8==3.8.3
-commands = flake8 --max-complexity 10 src test
+    flake8>=3.9.1,<4
+commands = flake8 src/ test/
 
 [testenv:docs]
-basepython = python3.8
 deps =
-    sphinx==3.2.1
+    sphinx>=4.0.2,<5
 whitelist_externals = make
 changedir = {toxinidir}/docs
 commands =
@@ -40,17 +39,26 @@ commands =
     make html
 
 [testenv:packaging]
-basepython = python3.8
+basepython = python3.9
 deps =
-    check-manifest==0.42
-    readme-renderer==26.0
-    twine==3.2.0
+    check-manifest==0.46
+    readme-renderer==29.0
+    twine>=3.4.1,<4
 whitelist_externals = rm
 commands =
     rm -rf dist/
     check-manifest
     python setup.py sdist bdist_wheel
     twine check dist/*
+
+[testenv:publish]
+basepython = {[testenv:packaging]basepython}
+deps =
+    {[testenv:packaging]deps}
+whitelist_externals = {[testenv:packaging]whitelist_externals}
+commands =
+    {[testenv:packaging]commands}
+    twine upload dist/*
 
 [testenv:graphs]
 basepython = python3.8
