--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36, py37, py38, py39, pypy3, lint, docs, packaging
+envlist = py36, py37, py38, py39, py310, pypy3, lint, docs, packaging
 
 [gh-actions]
 python =
@@ -7,6 +7,7 @@ python =
     3.7: py37
     3.8: py38
     3.9: py39, lint, docs, packaging, h2spec
+    3.10: py310
     pypy3: pypy3
 
 [testenv]
