--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36, py37, py38, py39, py310, pypy3, lint, docs, packaging
+envlist = py36, py37, py38, py39, py310, py311, pypy3, lint, docs, packaging
 
 [gh-actions]
 python =
@@ -8,6 +8,7 @@ python =
     3.8: py38
     3.9: py39, lint, docs, packaging, h2spec
     3.10: py310
+    3.11: py311
     pypy3: pypy3
 
 [testenv]
@@ -33,7 +34,7 @@ commands = flake8 src/ test/
 [testenv:docs]
 deps =
     sphinx>=4.0.2,<5
-whitelist_externals = make
+allowlist_externals = make
 changedir = {toxinidir}/docs
 commands =
     make clean
@@ -42,10 +43,10 @@ commands =
 [testenv:packaging]
 basepython = python3.9
 deps =
-    check-manifest==0.46
-    readme-renderer==29.0
+    check-manifest==0.49
+    readme-renderer==37.3
     twine>=3.4.1,<4
-whitelist_externals = rm
+allowlist_externals = rm
 commands =
     rm -rf dist/
     check-manifest
@@ -56,7 +57,7 @@ commands =
 basepython = {[testenv:packaging]basepython}
 deps =
     {[testenv:packaging]deps}
-whitelist_externals = {[testenv:packaging]whitelist_externals}
+allowlist_externals = {[testenv:packaging]allowlist_externals}
 commands =
     {[testenv:packaging]commands}
     twine upload dist/*
@@ -72,6 +73,6 @@ commands =
 basepython = python3.8
 deps =
     twisted[tls]==20.3.0
-whitelist_externals = {toxinidir}/test/h2spectest.sh
+allowlist_externals = {toxinidir}/test/h2spectest.sh
 commands =
     {toxinidir}/test/h2spectest.sh
