fix: No more BytesWarnings
Fixes #1236.

This patch makes all header operations operate on `bytes` and converts all headers and values to bytes before operation. With a follow up patch to `hpack` it should also increase efficiency as currently, `hpack` casts everything to a `str` first before converting back to bytes: https://github.com/python-hyper/hpack/blob/02afcab28ca56eb5259904fd414baa89e9f50266/src/hpack/hpack.py#L150-L151

--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ deps =
     pytest-xdist>=2.0.0,<3
     hypothesis>=5.5,<7
 commands =
-    pytest --cov-report=xml  --cov-report=term --cov=h2 {posargs}
+    python -bb -m pytest --cov-report=xml  --cov-report=term --cov=h2 {posargs}
 
 [testenv:pypy3]
 # temporarily disable coverage testing on PyPy due to performance problems
