update supported Python versions
remove EOL Python versions

--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,13 @@
 [tox]
-envlist = py36, py37, py38, py39, py310, py311, pypy3, lint, docs, packaging
+envlist = py39, py310, py311, py312, py13, pypy3, lint, docs, packaging
 
 [gh-actions]
 python =
-    3.6: py36
-    3.7: py37
-    3.8: py38
     3.9: py39, lint, docs, packaging, h2spec
     3.10: py310
     3.11: py311
+    3.12: py312
+    3.13: py313
     pypy3: pypy3
 
 [testenv]
@@ -33,7 +32,7 @@ commands = flake8 src/ test/
 
 [testenv:docs]
 deps =
-    sphinx>=5.0.2,<6
+    sphinx>=7.4.7,<9
 allowlist_externals = make
 changedir = {toxinidir}/docs
 commands =
@@ -43,9 +42,9 @@ commands =
 [testenv:packaging]
 basepython = python3.9
 deps =
-    check-manifest==0.49
-    readme-renderer==37.3
-    twine>=3.4.1,<4
+    check-manifest==0.50
+    readme-renderer==44.0
+    twine>=5.1.1,<6
 allowlist_externals = rm
 commands =
     rm -rf dist/
@@ -63,14 +62,14 @@ commands =
     twine upload dist/*
 
 [testenv:graphs]
-basepython = python3.8
+basepython = python3.9
 deps =
     graphviz==0.14.1
 commands =
     python visualizer/visualize.py -i docs/source/_static
 
 [testenv:h2spec]
-basepython = python3.8
+basepython = python3.9
 deps =
     twisted[tls]==20.3.0
 allowlist_externals = {toxinidir}/test/h2spectest.sh
