--- a/tox.ini
+++ b/tox.ini
@@ -13,11 +13,7 @@ python =
 [testenv]
 passenv =
     GITHUB_*
-deps =
-    pytest>=6.0.1,<7
-    pytest-cov>=2.10.1,<3
-    pytest-xdist>=2.0.0,<3
-    hypothesis>=5.5,<7
+dependency_groups = testing
 commands =
     python -bb -m pytest --cov-report=xml  --cov-report=term --cov=h2 {posargs}
 
@@ -26,13 +22,14 @@ commands =
 commands = pytest {posargs}
 
 [testenv:lint]
-deps =
-    flake8>=7.1.1,<8
-commands = flake8 src/ test/
+dependency_groups = linting
+allowlist_externals =
+    ruff
+commands =
+    ruff check src/ tests/
 
 [testenv:docs]
-deps =
-    sphinx>=7.4.7,<9
+dependency_groups = docs
 allowlist_externals = make
 changedir = {toxinidir}/docs
 commands =
@@ -41,15 +38,12 @@ commands =
 
 [testenv:packaging]
 basepython = python3.9
-deps =
-    check-manifest==0.50
-    readme-renderer==44.0
-    twine>=5.1.1,<6
+dependency_groups = packaging
 allowlist_externals = rm
 commands =
     rm -rf dist/
     check-manifest
-    python setup.py sdist bdist_wheel
+    python -m build --outdir dist/
     twine check dist/*
 
 [testenv:publish]
