--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,9 +1,13 @@
 graft src/h2
 graft docs
-graft test
+graft tests
 graft visualizer
 graft examples
+
 prune docs/build
+
 recursive-include examples *.py *.crt *.key *.pem *.csr
+
 include README.rst LICENSE CHANGELOG.rst tox.ini
+
 global-exclude *.pyc *.pyo *.swo *.swp *.map *.yml *.DS_Store
