migrate tox.ini into pyproject.toml

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,6 +8,6 @@ prune docs/build
 
 recursive-include examples *.py *.crt *.key *.pem *.csr
 
-include README.rst LICENSE CHANGELOG.rst tox.ini
+include README.rst LICENSE CHANGELOG.rst pyproject.toml
 
 global-exclude *.pyc *.pyo *.swo *.swp *.map *.yml *.DS_Store
