--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,10 +7,9 @@ on:
     branches: ["master"]
 
 jobs:
-  tox:
+  test:
     runs-on: ubuntu-latest
     strategy:
-      max-parallel: 5
       matrix:
         python-version:
         - "3.9"
@@ -21,25 +20,16 @@ jobs:
         - "pypy3.9"
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install tox
-      run: |
-        python -m pip install --upgrade pip setuptools
-        pip install --upgrade tox tox-gh-actions
     - name: Install h2spec
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        .github/workflows/install_h2spec.sh
-    - name: Initialize tox envs
-      run: |
-        tox --parallel auto --notest
-    - name: Test with tox
-      run: |
-        tox --parallel 0
+      run: mkdir bin && curl -sSL "https://github.com/summerwind/h2spec/releases/latest/download/h2spec_linux_amd64.tar.gz" | tar -xz --directory ./bin && ./bin/h2spec --version
+    - name: Install tox
+      run: pip install tox tox-gh-actions
+    - name: Run tests on Python ${{ matrix.python-version }}
+      run: tox
     - uses: codecov/codecov-action@v5
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
