--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,6 +5,9 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.13"
+  jobs:
+    install:
+      - pip install --group 'docs' .
 
 sphinx:
   configuration: docs/source/conf.py
